--- a/lang/langs/indo.yml
+++ b/lang/langs/indo.yml
@@ -1,4 +1,4 @@
-nama : Indonesia
+name : Indonesia
 
 #menu - menu.py
 menu : "Rose dibuat pada 10 Agustus 2021. Saat ini kami sedang mengembangkan dan memelihara plugin WilliamButcherBot dan Alita_Robot, hanya menggunakan pustaka Pyrogram.\n\n• kreator : [supun](https://t.me/supunma )\n• Bahasa : [python 3](https://www.python.org/)\n• Basis data : [Mongo db](https://cloud.mongodb.com/)\n• Server : [Heroku ](https://heroku.com/)\n• Versi Build : 1.0.9\n\n@Theszrosebot"
@@ -182,3 +182,179 @@ flood6 : "Suffix Tidak Diketahui, Gunakan /flood [ENABLE|DISABLE]"
 lang1 : "Kamu sudah menggunakan bahasa yang sama"
 lang2 : "Berhasil mengubah bahasa Anda."
 lang3 : "Gagal mengubah bahasa atau Bahasa dalam pembaruan."
+
+#plugin - lock.py
+lock1 : "Sudah terkunci."
+lock2 : "Sudah Tidak Terkunci."
+lock3 : "Untuk membuka ini, Anda harus membuka 'pesan' terlebih dahulu."
+lock4 : "Apa yang ingin Anda kunci? Periksa /locktypes untuk opsi yang tersedia."
+lock5 : "Anda Tidak Memiliki Izin yang Cukup."
+lock6 : "Semua izin tidak terkunci"
+lock7 : "{} sudah terkunci"
+lock8 : "Terkunci {}"
+lock9 : "{} sudah dibuka kuncinya"
+lock10 : "Terkunci Semuanya."
+lock11: "Bot sudah terkunci."
+lock12 : "Bot terkunci."
+lock13 : "Blok URL Sudah Diaktifkan Di Obrolan Ini"
+lock14 : "Url Terkunci."
+lock15 : "Bot tidak terkunci."
+lock16 : "Semua izin terkunci"
+
+#plugin - misc.py
+misc1 : "ID Pesan: {0}\nID Anda: {}\n"
+misc2 : "penggunanya tidak ada."
+misc3 ​​: "Berikan kode bahasa.\n[Opsi yang tersedia](https://telegra.ph/Lang-Codes-02-22).\nPenggunaan: /tr en"
+
+#plugin - nightmode.py
+nm1 : "Saya tidak mengerti /nightmode aktif dan /nightmode mati saja"
+nm2 : "Memproses..."
+nm3 : "Tambahkan Obrolan Ke Basis Data. Grup Ini Akan Ditutup Pada Pukul 12.00 (IST) Dan Akan Dibuka Pada Pukul 06.00 (IST)"
+nm4 : "Sudah Diaktifkan Di Chat Ini"
+nm5 : "Anda dapat mengatur mode malam hanya dalam grup :("
+nm6 : "**Menghapus Obrolan Ini Dari Basis Data. Grup Ini Tidak Akan Ditutup Lagi Pada Pukul 12.00(IST)"
+nm7 : "Tidak Diaktifkan Dalam Obrolan Ini"
+nm8 : "Saya tidak mengerti /nightmode aktif dan /nightmode mati saja"
+nm9 : "🌗 12:00, Grup Tutup Hingga 06:00. Mode Malam Dimulai ! \nDiberdayakan Oleh @szrosebot"
+nm10 : "🌗 06:00, Grup Dibuka.\nDiberdayakan oleh @szrosebot"
+nm11 : "Berikan juga parameter lain"
+nm12 : "Sintaks tidak valid \n Coba /bantu mode malam"
+nm13 : "Silakan masukkan tanggal dan waktu yang valid...!"
+nm14 : "Beberapa parameter hilang.!"
+nm15 : "Waktu buka dan tutup chat tidak bisa sama..!"
+nm16 : "Waktu buka chat harus lebih lama dari waktu tutup"
+
+#plugin - pin.py
+pin1 : "Saya telah menyematkan [pesan ini]({})."
+pin2 : "Kamu bukan admin yang melakukan ini"
+pin3 : "Perlu tenaga admin"
+pin4 : "Balas pesan untuk menyematkannya!"
+pin5 : "Lepas pin pesan"
+pin6 : "Pesan yang terakhir disematkan tidak disematkan!"
+pin7 : "Kamu bukan admin yang melakukan ini"
+pin8 : "Perlu tenaga admin"
+pin9 : "Apakah Anda benar-benar ingin melepas sematan semua pesan dalam obrolan ini?"
+pin10 : "Kamu bahkan bukan admin, jangan coba omong kosong yang meledak-ledak ini!"
+pin11 : "Kamu hanya seorang admin, bukan pemilik\nTetap dalam batasmu!"
+pin12 : "Semua pesan yang disematkan telah dilepas pinnya."
+pin13 : "Kamu tidak bisa menggunakan ini"
+pin14 : "butuh tenaga admin"
+pin15 : "Pin saluran anti saat ini {} "
+pin16 : "Pin anti saluran yang diaktifkan. Pin otomatis dari saluran sekarang akan diganti dengan pin sebelumnya."
+pin17 : "Pin anti saluran dinonaktifkan. Pin otomatis dari saluran tidak akan dihapus."
+pin18 : "Masukan Anda tidak dikenali sebagai salah satu dari: ya/tidak/hidup/mati"
+pin19 : "Penghapusan postingan saluran tertaut saat ini {}"
+pin20 : "Aktifkan CleanLinked! Sekarang semua pesan dari saluran yang ditautkan akan dihapus!"
+pin21 : "CleanLinked dimatikan! Pesan dari saluran tertaut tidak akan dihapus!"
+pin22 : "Masukan Anda tidak dikenali sebagai salah satu dari: ya/tidak/hidup/mati"
+pin23 : "Balas pesan atau masukkan teks untuk menyematkannya."
+pin24 : "Tidak ada pesan yang di-pin"
+
+#plugin - protection.py
+prote1 : "Saya tidak mengerti /antispam on dan /antispam off saja"
+prote2 : "Sudah diaktifkan."
+prote3 : "Tambahkan Obrolan Ke Database. Isi SPAM Grup Ini Akan Dihapus"
+prote4 : "Sudah dinonaktifkan."
+prote5 : "Obrolan Dihapus Ke Database. Konten SPAM Grup Ini Tidak Akan Dihapus"
+prote6 : "Saya tidak mengerti /antinsfw on dan /antinsfw off saja"
+prote7 : "Menambahkan Obrolan Ke Database. Konten NSFW Grup Ini Akan Dihapus"
+prote8 : "Menghapus Obrolan Ke Basis Data. Konten NSFW Grup Ini Tidak Akan Dihapus"
+
+#plugin - bersihkan.py
+purge1 : "Lebih dari 2 hari"
+purge2 : "Selesai{count_del_msg} Pesan telah dihapus"
+purge3 : "Balas pesan untuk memulai pembersihan!"
+purge4 : "Lebih dari 2 hari"
+purge5 : "Balas pesan untuk memulai spurge !"
+purge6 : "🤔"
+
+
+#plugin - urllock.py
+ul1 : "Sistem urllock diaktifkan. Saya akan Menghapus tautan."
+ul2 : "urllock Sudah Diaktifkan."
+ul3 : "❌ Sistem urllock Dinonaktifkan."
+ul4 : "urllock Sudah Dinonaktifkan."
+ul5 : "Penggunaan: /urllock [on/off]"
+
+#plugin - welcome.py
+welcome1 : "cleanwelcome Dinyalakan!"
+welcome2 : "cleanwelcome Dimatikan!"
+welcome3 : "apa yang kamu coba lakukan ?"
+welcome4 : "• Setelan saat ini:- {}"
+welcome5 : "cleangoodbye Dinyalakan!"
+welcome6 : "cleangoodbye dimatikan!"
+welcome7 : "• Setelan saat ini:- {}"
+welcome8 : "layanan bersih Diaktifkan!"
+welcome9 : "layanan kebersihan Dimatikan!"
+welcome10 : "Anda perlu membalas sebuah teks, periksa modul selamat datang di /help"
+welcome11 : "Menambahkan pesan selamat datang khusus untuk {}"
+welcome12 : "Pesan selamat tinggal telah berhasil disetel."
+welcome13 : "Pesan selamat tinggal telah berhasil disetel ulang."
+welcome14 : "Pesan selamat datang telah berhasil disetel ulang."
+welcome15 : "Aktifkan!"
+welcome16 : "Matikan!"
+welcome17 : "apa yang kamu coba lakukan ??"
+
+#plugin - warning.py
+warn1 : "Saya tidak bisa memperingatkan apa-apa! Beri tahu saya pengguna siapa yang harus saya peringatkan"
+warn2 : "mengapa saya harus memperingatkan diri saya sendiri?"
+warn3 : "Balas pesan untuk menghapusnya dan melarang pengguna!"
+warn4 : "Pengguna ini adalah admin dalam obrolan ini, saya tidak dapat memperingatkan mereka!"
+warn5 : "Peringatan telah disetel ulang untuk {}"
+warn6 : "Tidak ada peringatan yang harus dihapus"
+warn7 : "Apakah Anda yakin ingin menghapus semua peringatan dari semua pengguna dalam obrolan ini?\nTindakan ini tidak dapat dibatalkan."
+warn8 : "Pengguna ini adalah admin dalam obrolan ini, mereka tidak memiliki peringatan apa pun!"
+warn9 : "Pengguna ini tidak memiliki peringatan!"
+warn10 : "Saya tidak dapat menghapus peringatan apa pun! Beri tahu saya pengguna yang peringatannya harus dihapus!"
+warn11 : "Pengguna ini adalah admin dalam obrolan ini, mereka tidak memiliki peringatan apa pun!"
+warn12 : "Pengguna ini tidak memiliki peringatan!"
+warn13 : "Mode Peringatan telah disetel ke: {}"
+warn14 : "Mode Peringatan saat ini untuk mengobrol adalah: {}"
+warn15 : "Silakan pilih mode peringatan yang valid!\n\nOpsi yang valid adalah: ban,kick,mute"
+warn16 : "Warn Limit hanya bisa berupa angka!"
+warn17 : "Batas Peringatan telah disetel ke: {}"
+warn18 : "Batas Peringatan obrolan saat ini adalah: {}"
+
+#plugin - mute-v2.py
+mute1 : "Aku tidak bisa membisukan diriku sendiri!"
+mute2 : "Tidak dapat menemukan pengguna untuk dibisukan!"
+mute3 : "Pengguna ini adalah admin dalam obrolan ini, saya tidak dapat membisukan mereka!"
+mute4 : "Baca /help lagi!!"
+mute5 : "Anda belum menentukan waktu untuk membisukan pengguna ini!"
+
+#plugin - tagalert
+tagg1 : "Penggunaan: /tagalert [aktif | mati]"
+tagg2 : "Hanya pengguna dengan nama pengguna yang memenuhi syarat untuk layanan peringatan tag"
+tagg3 : "✅ Peringatan tag diaktifkan.\n\n»Bila seseorang menandai Anda sebagai @{}, Anda akan diberi tahu."
+tagg4 : "Peringatan tag sudah diaktifkan untuk Anda."
+tagg5 : "❌ Tanda peringatan dihapus untuk Anda."
+tagg6 : "Peringatan tag sudah dinonaktifkan untuk Anda."
+
+#plugin rules.py
+rules1 : "Admin untuk grup ini belum mengatur aturan!"
+rules2 : "Klik tombol dibawah untuk melihat peraturan grup ini!"
+rules3 : "Berikan beberapa teks untuk dijadikan aturan !!"
+rules4 : "Berhasil menetapkan aturan untuk grup ini."
+rules5 : "Silakan periksa bantuan tentang cara menggunakan perintah ini."
+
+#plugin flod.py
+flood1 : "Penggunaan: /flood [AKTIF|NONAKTIFKAN]"
+flood2 : "Saya akan Mute jika pengguna mengirim lebih dari 10 pesan berturut-turut (hanya 5 menit)"
+flood3 : "Nonaktif ! Tidak bisu jika pengguna mengirim lebih dari 10 pesan berturut-turut "
+flood4 : "Suffix Tidak Diketahui, Gunakan /flood [ENABLE|DISABLE]"
+
+#plugin filters
+filter1 : "Pastikan aku hadir di grupmu!!"
+filter2 : "Saya tidak terhubung ke grup mana pun!"
+filter3 : "Perintah Tidak Lengkap :( Gunakan menu Bantuan lagi"
+filter4 : "Hanya 100 filter dan 50 alias yang diizinkan per obrolan!\nUntuk menambahkan lebih banyak filter, hapus yang sudah ada."
+filter5 : "Silakan baca bagian bantuan untuk cara menyimpan filter!"
+filter6 : "Filter {} sudah ada!"
+filter7 : "Tidak dapat menyimpan filter yang dimulai dengan '<' atau '>'"
+filter8 : "Tidak ada teks di sini!"
+filter9 : "Harap berikan kata kunci untuk balasan filter ini!\nLampirkan filter dalam tanda kutip ganda"
+filter10 : "Harap berikan data untuk balasan filter ini!"
+filter11 : "Apa yang harus saya hentikan untuk membalas?"
+filter12 : "Tidak ada filter dalam obrolan ini"
+filter13 : "Oke, saya akan berhenti membalas filter itu"
+filter14 : "Itu bukan filter - Klik: /filters untuk mendapatkan filter yang sedang aktif."
